--- a/footer.html
+++ b/footer.html
@@ -1,299 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-      /* Styling for the social media icons */
-.social-icon {
-  color: #555;
-  font-size: 24px;
-  margin: 0 10px;
-  transition: color 0.3s ease;
-}
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    /* Styling for the social media icons */
+    .social-icon {
+      color: #555;
+      font-size: 24px;
+      margin: 0 10px;
+      transition: color 0.3s ease;
+    }
 
-.social-icon:hover {
-  color: #f39c12;
-}
-/* styles.css */
+    .social-icon:hover {
+      color: #f39c12;
+    }
 
-/* General styles for the footer */
-footer {
-  padding: 40px 0;
-  background-color: #f9f9f9;
-  color: #333;
-  font-size: 16px;
-  line-height: 1.6;
-  font-family: Arial, sans-serif;
-}
-
-/* Styling for the header "Madam Boutique" */
-h6 {
-  color: #222;
-  font-weight: bold;
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
-/* Styling for links in the footer */
-a {
-  color: #555;
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
-
-a:hover {
-  color: #f39c12;
-}
-
-/* Styling for the footer sections */
-.section-heading {
-  color: #222;
-  font-weight: bold;
-  margin-bottom: 15px;
-}
-
-/* Styling for the footer description */
-.footer-description {
-  color: #777;
-  margin-bottom: 30px;
-}
-
-/* Styling for the contact information */
-.contact-info {
-  color: #777;
-  font-size: 14px;
-  margin-bottom: 20px;
-}
-
-/* Styling for the address */
-.address {
-  font-size: 14px;
-  line-height: 1.4;
-}
-
-/* Styling for the email and phone icons */
-i.fas {
-  margin-right: 10px;
-  font-size: 16px;
-}
-
-/* Styling for the social media icons */
-.social-icons {
-  margin-top: 20px;
-}
-
-.social-icon {
-  display: inline-block;
-  color: #555;
-  font-size: 24px;
-  margin-right: 10px;
-  transition: color 0.3s ease;
-}
-
-.social-icon:hover {
-  color: #f39c12;
-}
-
-/* Styling for the copyright section */
-.footer-copyright {
-  background-color: #ddd;
-  color: #888;
-  padding: 10px 0;
-  font-size: 12px;
-  text-align: center;
-}
-/* styles.css */
-
-/* General styles for the footer */
-footer {
-  padding: 40px 0;
-  background-color: #f9f9f9;
-  color: #333;
-  font-size: 16px;
-  line-height: 1.6;
-  font-family: Arial, sans-serif;
-}
-
-/* Styling for the header "Madam Boutique" */
-h6 {
-  color: #222;
-  font-weight: bold;
-  font-size: 24px;
-  margin-bottom: 20px;
-  border-bottom: 2px solid #f39c12;
-  padding-bottom: 10px;
-}
-
-/* Styling for links in the footer */
-a {
-  color: #555;
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
-
-a:hover {
-  color: #f39c12;
-}
-
-/* Styling for the footer sections */
-.section-heading {
-  color: #222;
-  font-weight: bold;
-  margin-bottom: 15px;
-}
-
-/* Styling for the footer description */
-.footer-description {
-  color: #777;
-  margin-bottom: 30px;
-}
-
-/* Styling for the contact information */
-.contact-info {
-  color: #777;
-  font-size: 14px;
-  margin-bottom: 20px;
-}
-
-/* Styling for the address */
-.address {
-  font-size: 14px;
-  line-height: 1.4;
-}
-
-/* Styling for the email and phone icons */
-i.fas {
-  margin-right: 10px;
-  font-size: 16px;
-}
-
-/* Styling for the social media icons */
-.social-icons {
-  margin-top: 20px;
-}
-
-.social-icon {
-  display: inline-block;
-  color: #555;
-  font-size: 24px;
-  margin-right: 10px;
-  transition: color 0.3s ease;
-  border-radius: 50%;
-  padding: 8px;
-  background-color: #f9f9f9;
-}
-
-.social-icon:hover {
-  color: #f39c12;
-  background-color: #fff;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-/* Styling for the copyright section */
-.footer-copyright {
-  background-color: #ddd;
-  color: #888;
-}
-    </style>
     
+
+    /* styles.css */
+
+    /* General styles for the footer */
+    footer {
+      padding: 40px 0;
+      background-color: #f9f9f9;
+      color: #333;
+      font-size: 16px;
+      line-height: 1.6;
+      font-family: Arial, sans-serif;
+    }
+
+  
+    h6 {
+      color: #222;
+      font-weight: bold;
+      font-size: 24px;
+      margin-bottom: 20px;
+      border-bottom: 2px solid #f39c12;
+      padding-bottom: 10px;
+    }
+
+    /* Styling for links in the footer */
+    a {
+      color: #555;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    a:hover {
+      color: #f39c12;
+    }
+
+    /* Styling for the footer sections */
+    .section-heading {
+      color: #222;
+      font-weight: bold;
+      margin-bottom: 15px;
+    }
+
+    /* Styling for the footer description */
+    .footer-description {
+      color: #777;
+      margin-bottom: 30px;
+    }
+
+    /* Styling for the contact information */
+    .contact-info {
+      color: #777;
+      font-size: 14px;
+      margin-bottom: 20px;
+    }
+
+    /* Styling for the address */
+    .address {
+      font-size: 14px;
+      line-height: 1.4;
+    }
+
+    /* Styling for the email and phone icons */
+    i.fas {
+      margin-right: 10px;
+      font-size: 16px;
+    }
+
+    /* Styling for the social media icons */
+    .social-icons {
+      margin-top: 20px;
+    }
+
+    .social-icon {
+      display: inline-block;
+      color: #555;
+      font-size: 24px;
+      margin-right: 10px;
+      transition: color 0.3s ease;
+      border-radius: 50%;
+      padding: 8px;
+      background-color: #f9f9f9;
+    }
+
+    .social-icon:hover {
+      color: #f39c12;
+      background-color: #fff;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Styling for the copyright section */
+    .footer-copyright {
+      background-color: #ddd;
+      color: #888;
+    }
+  </style>
+
 </head>
+
 <body>
-<!-- Section: Social media -->
+  <!-- Section: Social media -->
 
-        <!-- Section: Links  -->
-        <section class="">
-          <div class="container text-center text-md-start mt-5">
-              <!-- Grid row -->
-              <div class="row mt-3">
-                  <!-- Grid column -->
-                  <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                      <!-- Content -->
-                      <h6 class="text-uppercase fw-bold mb-4">
-                          <i class="fas fa-gem me-3"></i>LA-IMPERIAL
-                      </h6>
-                      <p>
-                          An appliance is a device or machine in your home that you use to do a job such as cleaning or cooking. Appliances are often electrical. ...the vacuum cleaner, washing machine and other household appliances. They are one of America's biggest domestic appliance manufacturers..
-                      </p>
-                  </div>
-                  <!-- Grid column -->
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i>LA-IMPERIAL
+          </h6>
+          <p>
+            An appliance is a device or machine in your home that you use to do a job such as cleaning or cooking.
+            Appliances are often electrical. ...the vacuum cleaner, washing machine and other household appliances. They
+            are one of America's biggest domestic appliance manufacturers..
+          </p>
+        </div>
+        <!-- Grid column -->
 
-                  <!-- Grid column -->
-                  <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                      <!-- Links -->
-                      <h6 class="text-uppercase fw-bold mb-4">
-                          CUSTOMER CARE
-                      </h6>
-                      <p>
-                          <a href="#!" class="text-reset">Exchanges & Returns</a>
-                      </p>
-                      <p>
-                          <a href="#!" class="text-reset">FAQs</a>
-                      </p>
-                      <p>
-                          <a href="#!" class="text-reset">Payments</a>
-                      </p>
-                  </div>
-                  <!-- Grid column -->
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            CUSTOMER CARE
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Exchanges & Returns</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">FAQs</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Payments</a>
+          </p>
+        </div>
+        <!-- Grid column -->
 
-                  <!-- Grid column -->
-                  <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                      <!-- Links -->
-                      <h6 class="text-uppercase fw-bold mb-4">
-                          INFORMATION
-                      </h6>
-                      <p>
-                          <a href="ABOUTUS.HTML" class="text-reset">About Us</a>
-                      </p>
-                      <p>
-                          <a href="PRIVACYPOLICY.HTML" class="text-reset">Privacy policy</a>
-                      </p>
-                      <p>
-                          <a href="SAFEPAY.HTML" class="text-reset">Safepay Guide</a>
-                      </p>
-                  </div>
-                  <!-- Grid column -->
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            INFORMATION
+          </h6>
+          <p>
+            <a href="ABOUTUS.HTML" class="text-reset">About Us</a>
+          </p>
+          <p>
+            <a href="aboutus.html" class="text-reset">Privacy policy</a>
+          </p>
+          <p>
+            <a href="aboutus.html" class="text-reset">Safepay Guide</a>
+          </p>
+        </div>
+        <!-- Grid column -->
 
-                  <!-- Grid column -->
-                  <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                      <!-- Links -->
-                      <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                      <p><i class="fas fa-home me-3"></i> LA-IMPERIAL Retail Head Office
-                          1.5-Km, Defence Road, Bhobtian Chowk, Off Raiwind Road, Opposite Karachi University, Karachi.</p>
-                      <p>
-                          <i class="fas fa-envelope me-3"></i>
-                          wecare@LA-IMPERIALonline.com
-                      </p>
-                      <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-                      <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+          <p><i class="fas fa-home me-3"></i> LA-IMPERIAL Retail Head Office North Nazimabad</p>
+          <p>
+            <i class="fas fa-envelope me-3"></i>
+            wecare@LA-IMPERIALonline.com
+          </p>
+          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
 
-                      <!-- Social media icons -->
-                      <div class="social-icons">
-                          <a href="https://www.instagram.com/madamboutique/" class="social-icon" target="_blank">
-                              <i class="fab fa-instagram"></i>
-                          </a>
-                          <a href="https://twitter.com/madamboutique/" class="social-icon" target="_blank">
-                              <i class="fab fa-twitter"></i>
-                          </a>
-                      </div>
-                  </div>
-                  <!-- Grid column -->
-              </div>
-              <!-- Grid row -->
+          <!-- Social media icons -->
+          <div class="social-icons">
+            <a href="#" class="social-icon" target="_blank">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#" class="social-icon" target="_blank">
+              <i class="fab fa-twitter"></i>
+            </a>
           </div>
-      </section>
-      <!-- Section: Links  -->
-
-      <!-- Copyright -->
-      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-          © 2023 Copyright:
-          <a class="text-reset fw-bold" href="https://mdbootstrap.com/">LA-IMPERIAL all rights reserved</a>
+        </div>
+        <!-- Grid column -->
       </div>
-      <!-- Copyright -->
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2023 Copyright:
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">LA-IMPERIAL all rights reserved</a>
+  </div>
+  <!-- Copyright -->
   </footer>
   <!-- Footer -->
-</section>
+  </section>
 </body>
+
 </html>
