--- a/nav.html
+++ b/nav.html
@@ -83,10 +83,10 @@
             Samsung
           </a>
           <div class="dropdown-menu" >
-            <a class="dropdown-item" href="#">All Samsung Products</a>
-            <a class="dropdown-item" href="#">TV</a>
-            <a class="dropdown-item" href="#">Refrigerator</a>
-            <a class="dropdown-item" href="#">Washing Machines</a>
+            <a class="dropdown-item" href="samsungp.html">All Samsung Products</a>
+            <a class="dropdown-item" href="samsungp.html">TV</a>
+            <a class="dropdown-item" href="samsungp.html">Refrigerator</a>
+            <a class="dropdown-item" href="samsungp.html">Washing Machines</a>
           </div>
         </li>
 
@@ -94,13 +94,13 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            Dawnlance
+            Dawlance
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">All Dawnlance Products</a>
-            <a class="dropdown-item" href="#">TV</a>
-            <a class="dropdown-item" href="#">Refrigerator</a>
-            <a class="dropdown-item" href="#">Washing Machines</a>
+            <a class="dropdown-item" href="dawnlancep.html">All Dawlance Products</a>
+            <a class="dropdown-item" href="dawnlancep.html">TV</a>
+            <a class="dropdown-item" href="dawnlancep.html">Refrigerator</a>
+            <a class="dropdown-item" href="dawnlancep.html">Washing Machines</a>
           </div>
         </li>
       </ul>
