--- a/samsungp.html
+++ b/samsungp.html
@@ -34,7 +34,7 @@
     </ol>
   </nav>
   <div class="container text-center">
-    <h1 class="text-center">Haier Products </h1>
+    <h1 class="text-center">Samsung Products </h1>
     <div class="row g-4" id="row">
 
     </div>
@@ -51,7 +51,7 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
   <script src="js/variable.js"></script>
   <script>
-    for (i of haierp) {
+    for (i of samsungp) {
       $("#row").append(`
             <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
           <!-- Card-->
