--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="/css/swiper.css">
   <title>LaImperial</title>
+  <link rel="icon" type="image/x-icon" href="/images/8480075711_8d2a7a35-f43c-4751-8c79-7a68834d763c.png">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="script.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
