--- a/compare.html
+++ b/compare.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" type="image/x-icon" href="/images/8480075711_8d2a7a35-f43c-4751-8c79-7a68834d763c.png">
     <title>LaImperial</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -84,7 +84,7 @@
     </div>
 </div>
 
-    <script src="/js/variable.js"></script>
+    <script src="js/variable.js"></script>
     <script>
         for (var i = 1; i < all_products.length; i++) {
             document.getElementById("select1").innerHTML += `
@@ -98,7 +98,8 @@
         }
         function item1(a) {
             var select2 = document.getElementById("select2").value;
-            if (a != select2) {
+            if (a != select2)
+             {
 
                 document.getElementById("img1").src = all_products[a].imgsrc;
                 document.getElementById("price1").innerHTML = all_products[a].price;
