--- a/footer.html
+++ b/footer.html
@@ -19,8 +19,7 @@
       color: #f39c12;
     }
 
-    
-
+  
     /* styles.css */
 
     /* General styles for the footer */
@@ -146,10 +145,10 @@
             CUSTOMER CARE
           </h6>
           <p>
-            <a href="#!" class="text-reset">Exchanges & Returns</a>
+            <a href="Product.html" class="text-reset">Exchanges & Returns</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">FAQs</a>
+            <a href="Contactus.html" class="text-reset">Contact Us</a>
           </p>
           <p>
             <a href="#!" class="text-reset">Payments</a>
@@ -167,10 +166,10 @@
             <a href="ABOUTUS.HTML" class="text-reset">About Us</a>
           </p>
           <p>
-            <a href="aboutus.html" class="text-reset">Privacy policy</a>
+            <a href="aboutus.html" class="text-reset">Our Team</a>
           </p>
           <p>
-            <a href="aboutus.html" class="text-reset">Safepay Guide</a>
+            <a href="aboutus.html" class="text-reset">Latest Statistics</a>
           </p>
         </div>
         <!-- Grid column -->
