--- a/footer.html
+++ b/footer.html
@@ -117,16 +117,10 @@
 </head>
 
 <body>
-  <!-- Section: Social media -->
-
-  <!-- Section: Links  -->
   <section class="">
     <div class="container text-center text-md-start mt-5">
-      <!-- Grid row -->
       <div class="row mt-3">
-        <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-          <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
             <i class="fas fa-gem me-3"></i>LA-IMPERIAL
           </h6>
@@ -136,11 +130,7 @@
             are one of America's biggest domestic appliance manufacturers..
           </p>
         </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
             CUSTOMER CARE
           </h6>
@@ -154,11 +144,7 @@
             <a href="#!" class="text-reset">Payments</a>
           </p>
         </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
             INFORMATION
           </h6>
@@ -172,11 +158,7 @@
             <a href="aboutus.html" class="text-reset">Latest Statistics</a>
           </p>
         </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-          <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
           <p><i class="fas fa-home me-3"></i> LA-IMPERIAL Retail Head Office North Nazimabad</p>
           <p>
@@ -185,8 +167,6 @@
           </p>
           <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
           <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
-
-          <!-- Social media icons -->
           <div class="social-icons">
             <a href="#" class="social-icon" target="_blank">
               <i class="fab fa-instagram"></i>
@@ -196,21 +176,14 @@
             </a>
           </div>
         </div>
-        <!-- Grid column -->
       </div>
-      <!-- Grid row -->
     </div>
   </section>
-  <!-- Section: Links  -->
-
-  <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2023 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">LA-IMPERIAL all rights reserved</a>
+    <a class="text-reset fw-bold" href="index.html">LA-IMPERIAL all rights reserved</a>
   </div>
-  <!-- Copyright -->
   </footer>
-  <!-- Footer -->
   </section>
 </body>
 
