--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="/css/swiper.css">
+  <meta name="keywords" content="La imperial appliances washing machine, La Imperial Appliances , La Imperial Pakistan  , La Imperial Contact Number, la imperial , la imperial tv , la imperial smart tv price">
   <title>LaImperial</title>
   <link rel="icon" type="image/x-icon" href="/images/8480075711_8d2a7a35-f43c-4751-8c79-7a68834d763c.png">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
