--- a/Contactus.html
+++ b/Contactus.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="La imperial appliances washing machine, La Imperial Appliances , La Imperial Pakistan  , La Imperial Contact Number, la imperial , la imperial tv , la imperial smart tv price">
   <title>Contact Us</title>
   <link rel="icon" type="image/x-icon" href="/images/8480075711_8d2a7a35-f43c-4751-8c79-7a68834d763c.png">
   <link rel="stylesheet" href="/css/contactus.css">
