--- a/Product.html
+++ b/Product.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="La imperial appliances washing machine, La Imperial Appliances , La Imperial Pakistan  , La Imperial Contact Number, la imperial , la imperial tv , la imperial smart tv price">
+
   <title>LaImperial Products</title>
+
   <link rel="icon" type="image/x-icon" href="/images/8480075711_8d2a7a35-f43c-4751-8c79-7a68834d763c.png">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
